# PrimesSRP

./: .gitignore  CMakeLists.txt  README.md
include/: Denominators.hpp  PrimeCharacteristics.hpp  PrimeGeneration.hpp
src/: Denominators.cpp  PrimeCharacteristics.cpp  PrimeGeneration.cpp  main.cpp
tests/: test.cpp
